--- a/src/styles/_default.scss
+++ b/src/styles/_default.scss
@@ -31,13 +31,13 @@ body {
   width: 100%;
   font-size: 100%;
   line-height: 1;
-  background-color: hsla(238, 22%, 27%, 1);
   font-size: 16px;
   font-family: Roboto, sans-serif;
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   scroll-behavior: smooth;
+  background-color: hsla(238, 22%, 27%, 1);
 }
 input,
 button,
@@ -78,3 +78,9 @@ h6 {
 }
 /* ::-webkit-scrollbar {display: none;} */
 /* ---end nullification--- */
+
+.fill {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
