settings page is ready. profile page is almost ready. now feed page and post creation are awesome

--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -4,9 +4,8 @@
   height: 56px;
   color: white;
   font-size: 16px;
-  max-width: 218px;
 
   &.red {
-    background-color: rgb(180, 46, 32);
+    background-color: hsla(360, 80%, 27%, 1);
   }
 }
