--- a/src/components/Input/Input.module.scss
+++ b/src/components/Input/Input.module.scss
@@ -2,12 +2,44 @@
   display: flex;
   flex-direction: column;
   gap: 5px;
+
+  &.settingsInput,
+  &.settingsTextarea {
+    width: 100%;
+    max-width: 900px;
+    display: grid;
+    grid-template-columns: 91px 1fr;
+    align-items: center;
+    margin-bottom: 30px;
+    gap: 39px;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 125%;
+    color: hsla(0, 0%, 0%, 1);
+  }
+  &.settingsTextarea {
+    display: grid;
+    align-items: start;
+  }
 }
+
 .input {
   padding: 18px 16px;
   border-radius: 10px;
   border: 1px solid hsla(210, 5%, 85%, 1);
 
+  &.settingsInput {
+    border-radius: 30px;
+    max-width: 263px;
+  }
+
+  &.settingsTextarea {
+    display: grid;
+    align-items: start;
+    border-radius: 30px;
+    max-width: 779px;
+    min-height: 242px;
+  }
   // .&red {
 
   // }
