--- a/src/layout/Navigation/Navigation.module.scss
+++ b/src/layout/Navigation/Navigation.module.scss
@@ -14,7 +14,14 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: 5px;
+  gap: 13px;
+
+  .name {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 125%;
+    color: hsla(238, 22%, 27%, 1);
+  }
 
   .imageWrapper {
     width: 68px;
@@ -23,17 +30,18 @@
     border-radius: 20px;
     overflow: hidden;
   }
-
-  .avatar {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
 }
 
 .link {
+  gap: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   padding: 10px;
   border-radius: 10px;
   border: 1px solid black;
-  font-size: 18px;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 125%;
+  color: hsla(238, 22%, 27%, 1);
 }
