--- a/src/pages/PostCreationPage/PostCreationPage.module.scss
+++ b/src/pages/PostCreationPage/PostCreationPage.module.scss
@@ -7,6 +7,14 @@
 
   .container {
     padding: 50px;
+
+    .title {
+      font-weight: 700;
+      font-size: 32px;
+      line-height: 125%;
+      margin-bottom: 73px;
+      color: hsla(238, 22%, 27%, 1);
+    }
   }
 }
 
@@ -21,5 +29,10 @@
 
   .inputs {
     gap: 32px;
+  }
+
+  .button {
+    margin: 0 auto;
+    width: 218px;
   }
 }
