--- a/src/components/PostsGrid/PostsGrid.module.scss
+++ b/src/components/PostsGrid/PostsGrid.module.scss
@@ -44,7 +44,7 @@
 .buttons {
   display: flex;
   justify-content: space-between;
-  padding: 40px 70px;
+  padding: 0 50px 50px 50px;
 
   .button {
     width: 100%;
