--- a/src/pages/PostCreationPage/PostCreationPage.module.scss
+++ b/src/pages/PostCreationPage/PostCreationPage.module.scss
@@ -36,3 +36,24 @@
     width: 218px;
   }
 }
+
+.labelTextarea {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 125%;
+  color: hsla(0, 0%, 0%, 1);
+  display: flex;
+  flex-direction: row;
+  gap: 87px;
+}
+
+.textarea {
+  width: 100%;
+  padding: 18px 16px;
+  border-radius: 10px;
+  border: 1px solid hsla(210, 5%, 85%, 1);
+  border-radius: 30px;
+  max-width: 779px;
+  min-height: 242px;
+  resize: none;
+}
